scss/numerictextbox/_theme.scss
@include exports("numerictextbox/theme") {

    // Numeric
    .k-numerictextbox {

        // Normal state
        .k-numeric-wrap {
            @include appearance( input );
            transition: $transition;
        }
        .k-select {
            @include appearance( button );
        }

        // Hovered state
        .k-state-hover {
            @include appearance( hovered-input );
        }
        .k-select:hover {
            @include appearance( hovered-button );
            border-color: $input-hovered-border;
        }

        // Focused state
        .k-state-focused {
            @include appearance( focused-input );
            box-shadow: $button-focused-shadow;
        }

        // Selected state
        .k-link.k-state-selected {
            @include appearance( pressed-button );
        }

    }

}

